log/build_2023-08-16_05-19-52/agv_gui/stdout_stderr.log
[ 20%] Automatic MOC and UIC for target agv_gui
[ 20%] Built target agv_gui_autogen
Scanning dependencies of target agv_gui
[ 40%] Building CXX object CMakeFiles/agv_gui.dir/src/mtr_node.cpp.o
[ 60%] Building CXX object CMakeFiles/agv_gui.dir/src/main_gui.cpp.o
In file included from /usr/include/aarch64-linux-gnu/qt5/QtCore/qobject.h:46,
                 from /usr/include/aarch64-linux-gnu/qt5/QtCore/qcoreapplication.h:46,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/qapplication.h:44,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/QApplication:1,
                 from /home/amr_1/agv_gui/src/agv_gui/src/main_gui.cpp:1:
/usr/include/aarch64-linux-gnu/qt5/QtCore/qobjectdefs.h: In instantiation of ‘struct QtPrivate::HasQ_OBJECT_Macro<MotorSub>’:
/usr/include/aarch64-linux-gnu/qt5/QtCore/qobject.h:235:9:   required from ‘static QMetaObject::Connection QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, const typename QtPrivate::FunctionPointer<Func2>::Object*, Func2, Qt::ConnectionType) [with Func1 = void (MotorSub::*)(const QString&); Func2 = void (MainGui::*)(const QString&); typename QtPrivate::FunctionPointer<Func>::Object = MotorSub; typename QtPrivate::FunctionPointer<Func2>::Object = MainGui]’
/home/amr_1/agv_gui/src/agv_gui/src/main_gui.cpp:119:86:   required from here
/usr/include/aarch64-linux-gnu/qt5/QtCore/qobjectdefs.h:622:37: error: ‘qt_metacall’ is not a member of ‘MotorSub’
  622 |         enum { Value =  sizeof(test(&Object::qt_metacall)) == sizeof(int) };
      |                                     ^~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/aarch64-linux-gnu/qt5/QtGui/qtguiglobal.h:43,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/qtwidgetsglobal.h:43,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/qapplication.h:43,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/QApplication:1,
                 from /home/amr_1/agv_gui/src/agv_gui/src/main_gui.cpp:1:
/usr/include/aarch64-linux-gnu/qt5/QtCore/qobject.h: In instantiation of ‘static QMetaObject::Connection QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, const typename QtPrivate::FunctionPointer<Func2>::Object*, Func2, Qt::ConnectionType) [with Func1 = void (MotorSub::*)(const QString&); Func2 = void (MainGui::*)(const QString&); typename QtPrivate::FunctionPointer<Func>::Object = MotorSub; typename QtPrivate::FunctionPointer<Func2>::Object = MainGui]’:
/home/amr_1/agv_gui/src/agv_gui/src/main_gui.cpp:119:86:   required from here
/usr/include/aarch64-linux-gnu/qt5/QtCore/qobject.h:235:9: error: static assertion failed: No Q_OBJECT in the class with the signal
  235 |         Q_STATIC_ASSERT_X(QtPrivate::HasQ_OBJECT_Macro<typename SignalType::Object>::Value,
      |         ^~~~~~~~~~~~~~~~~
In file included from /usr/include/aarch64-linux-gnu/qt5/QtCore/qcoreapplication.h:46,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/qapplication.h:44,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/QApplication:1,
                 from /home/amr_1/agv_gui/src/agv_gui/src/main_gui.cpp:1:
/usr/include/aarch64-linux-gnu/qt5/QtCore/qobject.h:254:42: error: ‘staticMetaObject’ is not a member of ‘QtPrivate::FunctionPointer<void (MotorSub::*)(const QString&)>::Object’ {aka ‘MotorSub’}
  254 |                             type, types, &SignalType::Object::staticMetaObject);
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/agv_gui.dir/build.make:89: CMakeFiles/agv_gui.dir/src/main_gui.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:79: CMakeFiles/agv_gui.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
